# sharmavid

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: cargo.sh  com.ranfdev.SharMaVid.Devel.json
data/: com.ranfdev.SharMaVid.desktop.in.in  com.ranfdev.SharMaVid.gschema.xml.in  com.ranfdev.SharMaVid.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: channel_page.ui  mini_player.ui  search_page.ui  thumbnail.ui  video_page.ui  video_row.ui  window.ui
hooks/: tags.ccuGTp
po/: POTFILES.in
src/: application.rs  channel_page.rs  invidious.rs  invidious_client.rs  main.rs  meson.build  thumbnail.rs  video_page.rs  video_row.rs  window.rs
src/glib_utils/: any_gobject.rs  any_list_model.rs  mod.rs
src/invidious/: client.rs  core.rs
src/widgets/: channel_page.rs  mini_player.rs  mod.rs  remote_image.rs  search_page.rs  thumbnail.rs  video_page.rs  video_row.rs  window.rs
