[package]
name = "sharmavid"
version = "0.1.0"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.5"
gtk = {version = "0.3.1", package = "gtk4"}
libadwaita = {git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.3.2"
anyhow = "1.0.45"
cap-directories = "0.21.1"
cap-async-std = "0.21.1"
async-trait = "0.1.51"
