[package]
name = "sharmavid"
version = "0.1.0"
authors = ["ranfdev <ranfdev@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.5"
gtk = {git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4"}
libadwaita = {git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"}
serde = { version = "1.0", features = ["derive"] }
ev-stream-gtk-rs = {git = "https://github.com/ranfdev/ev-stream-gtk-rs.git"}
serde_json = "1.0"
surf = "2.3.2"
anyhow = "1.0.45"
async-trait = "0.1.51"
thiserror = "1"
url = { version = "2", features = ["serde"] }
serde_urlencoded = "0.7"
derive_builder = "0.10.2"
futures = "0.3.19"
paste = "1.0"

[patch.crates-io]
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", package = "glib", version = "0.15.0"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", package = "gio"}
